# youtube-transcript-api

./: .env.example  .gitignore  API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  CACHING_IMPROVEMENTS.md  CHANGELOG.md  DEPLOYMENT_STATUS.md  FRONTEND_INTEGRATION.md  QUICK_START.md  RAILWAY_DEPLOYMENT.md  README.md  Services.md  TESTING_GUIDE.md  cache.py  changelog.yaml  main.py  nixpacks.toml  pyproject.toml  railway.json  run_tests.sh  test_cache.py  test_new_endpoints.sh  test_url_formats.py
.claude/: settings.local.json
.claude/agents/: architecture-mapper.md
.roo/: mcp.json
docs/: SERVICES.md
docs/api/: AI_FEATURES.md  QUICK_REFERENCE.md
docs/deployment/: DEPLOYMENT_STATUS.md  ENABLE_REDIS_ON_RAILWAY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_REDIS_QUICK_START.md
docs/setup/: CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DEV_SETUP.md  QUICK_START.md  REDIS_SETUP.md  WARP.md
migrations/: 0001_initial_schema.sql
prompts/business/create_hormozi_offer/: system.md
prompts/business/create_idea_compass/: system.md
prompts/create_5_sentence_summary/: system.md
prompts/create_summary/: system.md
scripts/: deploy-to-railway.sh  pull-env-from-railway.sh  test_endpoints.sh
src/youtube_api/: __init__.py  app.py  config.py  dependencies.py  exceptions.py
src/youtube_api/routers/: ai.py  (+5 more)
tests/: README.md  config.py  conftest.py  requirements.txt  run_all_tests.py  test_ai.py  test_health.py  test_prompts.py  test_storage.py  test_video.py  utils.py
tests/integration/: test_endpoints.py
tests/unit/: test_cache.py  test_url_parser.py
workers/edge-api/: package-lock.json  package.json  tsconfig.json  wrangler.toml
(+43 files in other folders)
