[project]
name = "youtube-api-server"
version = "1.0.0"
description = "A FastAPI-based server for extracting YouTube video information"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "youtube-transcript-api==1.2.1",
    "gunicorn==21.2.0",
    "pydantic==2.11.7",
    "typing-extensions==4.14.1",
    "redis==5.2.1",
    "anthropic==0.39.0",
]

[project.scripts]
youtube-api-server = "main:app"
