[project]
name = "youtube-summaries-api"
version = "2.0.0"
description = "A FastAPI-based server for extracting YouTube video transcripts, summaries, and AI-powered features"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "youtube-transcript-api==1.2.1",
    "gunicorn==21.2.0",
    "pydantic==2.11.7",
    "pydantic-settings>=2.0.0",
    "typing-extensions==4.14.1",
    "redis==5.2.1",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "structlog>=23.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
youtube-summaries-api = "src.youtube_api.app:run_server"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/youtube_api --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_api"]
